--- a/Proje/StyleDoc.css
+++ b/Proje/StyleDoc.css
@@ -97,5 +97,41 @@ list-style: none;
     padding-right: 30px;
     padding-bottom: 100px;
 }
+#weather
+{
+    float : right;
+    margin-right:100px ;  
+}
+#city
+{
+    float : right;
+    margin-right:100px ; color: rgb(250, 250, 250); font-size: 40px;
+}
+#temp
+{
+    align-items: center;
+    color:rgb(236, 233, 52)
+}
+#description
+{
+    font-size:medium;
+    color:aliceblue;
+    text-align: center;
+    padding-right: 900px;
+}
+#previousButton
+{
+    position: absolute;
+    left:48%;
+    font-size: 30px;
+}
+#nextButton
+{
+    position: absolute;
+    left:48%;
+    font-size: 30px;
+}
+
+
 
 
