--- a/Proje/StyleDoc.css
+++ b/Proje/StyleDoc.css
@@ -1,31 +1,40 @@
-#logos
+#home
 {
-    background-color: bisque;
+    background-image: url(HakkındaBg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
-#saulogo
+#name
 {
-    width: 150px;
+    font-family: 'Archivo Black', sans-serif;
+    position:relative; 
+    left:30%; 
+    font-size:70px; 
+    color:white;
+    top:60px;
 }
-#logodiv
+#hakkımda
 {
-    float: left;
+    width:50%;
+     color:white; 
+    background-color: rgb(51, 46, 46, .3); 
+    border-style: double;
+     margin-left: 30px;
+     text-align: center;
+     float: left;
 }
-#baslik
+.iletils
 {
-    float:right;
-    font-size: 40px;
+    width: 100px;
 }
-.clear
-{
-    clear:both;
-}
-#bosluk
-{
-    height: 5%;
-    width: 100%;
-    text-align: right;
-    background-color: rgb(83, 169, 169);
-}
+
+
+
+
+
+
+
 ul
 {
 list-style: none;
@@ -49,7 +58,7 @@ list-style: none;
 {
     background-image: url("C:/Users/524ha/OneDrive/Masaüstü/Proje/BackgroundWall.jpg");
     background-size: cover;
-    background-attachment: scroll;
+    background-attachment: fixed;
 
 }
 .Sett
@@ -130,6 +139,34 @@ list-style: none;
 {
     width:100%;
 }
-
+.clear
+{
+    clear:both;
+}
+.ilet-log
+{
+    position: relative;
+    bottom:20px;
+    left: 20%;
+    width: 40px;
+    float: left;
+}
+.ile-text
+{
+    position: relative;
+    top: 23px;
+}
+.div-pic
+{
+    position: relative;
+    left:25%;
+    width: 50px;
+    top:10px;
+    
+}
+.div-text
+{
+    text-align: center;
+}
 
 
