--- a/Proje/Tarihçe.css
+++ b/Proje/Tarihçe.css
@@ -3,7 +3,7 @@
     background-color: rgb(98, 94, 94, .5);
     height: 100%;
 }
-#kahtap
+.kahtap
 {
     width: 160%;
     color:white;
@@ -11,4 +11,35 @@
     position: relative;
     right: 30%;
     
+}
+#nmr
+{
+    margin-top: 2400px;
+}
+.nmt
+{
+    width:90% ;
+    background: rgb(0,0,0,.5);
+    color:white; left:5%; 
+    position: relative;
+}
+.navbar
+{
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    background-color: rgb(250, 250, 250);
+    
+}
+#Adıyaman
+{
+   
+    font-family: 'Satisfy', cursive;
+
+}
+.Sett
+{
+    color: rgb(150, 69, 69);
+    font-family: 'Raleway', sans-serif;
+    font-size: larger;
 }
