--- a/Proje/Şehrim.css
+++ b/Proje/Şehrim.css
@@ -17,6 +17,7 @@
     color: rgb(150, 69, 69);
     font-family: 'Raleway', sans-serif;
     font-size: larger;
+    text-decoration: none;
 }
 #weatherr
 {
